@@ -86,17 +86,6 @@ public interface SelectBuilder<T> {
      * Installs an optional constraint function defining how much of the request entity attributes / relationships
      * the client can see.
      *
-     * @since 1.3
-     * @deprecated since 2.4 in favor of {@link #constraint(Constraint)}.
-     */
-    default SelectBuilder<T> constraints(Constraint<T> constraint) {
-        return constraint(constraint);
-    }
-
-    /**
-     * Installs an optional constraint function defining how much of the request entity attributes / relationships
-     * the client can see.
-     *
      * @param constraint an instance of Constraint function.
      * @return this builder instance.
      * @since 2.4
@@ -234,13 +223,6 @@ public interface SelectBuilder<T> {
      * @since 2.4
      */
     DataResponse<T> get();
-
-    /**
-     * @deprecated since 2.4 in favor of {@link #get()}.
-     */
-    default DataResponse<T> select() {
-        return get();
-    }
 
     /**
      * Runs the query corresponding to the state of this builder, returning
