@@ -1,6 +1,7 @@
 Release 2.13
 
 #284 Cayenne 4.0.RC1 is out... upgrading
+#300 Removing API deprecated as of 2.5 or earlier
 
 Release 2.12
 
